--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,5 +1,5 @@
 :root {
-  --slidev-theme-primary: #5d8392;
+  /* --slidev-theme-primary: #5d8392; */
 }
 
 .slidev-layout.cover,
@@ -19,4 +19,7 @@
   table + h2 {
     @apply mt-10;
   }
+}
+.slidev-layout blockquote {
+  border-left: .25em solid var(--slidev-theme-primary);
 }
